--- a/heart.css
+++ b/heart.css
@@ -23,7 +23,25 @@ body {
     height: 100%; 
   }
   
+  button {
+    background-color: #7A2048;
+    border:#228567;
+    border-radius: 20%;
+    color: white;
+    padding: 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    transition-duration: 0.4s;
+    border-radius: 12px;
   
+  }
+      
+  button:hover {
+      background-color: #04AA6D; /* Green */
+      color: white;
+  }
   
   svg {
     position: fixed;
