--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ p,
 }
 
 body {
-  background: #ffe;
+  background: #CADCFC;
   font: 14px/1.4 sans-serif;
 }
 
@@ -31,7 +31,7 @@ body {
   top: 80px;
   display: none;
   font-size: 16px;
-  color: #228567;
+  color: #CC313D;
 }
 
 #clock-box {
@@ -62,7 +62,7 @@ body {
 
 
 button {
-	background-color: #f44336; 
+	background-color: #7A2048;
 	border:#228567;
 	border-radius: 20%;
 	color: white;
